syntax = "proto3";
package processing.v1alpha1;
import "google/protobuf/timestamp.proto";
import "webapis/v1alpha1/user.proto";

message CreateUserRequest {
    string email = 1;
    string username = 2;
    string password = 3;
}

message CreateUserResponse {
    User user = 1;
}

message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message LoginUserResponse {
    User user = 1;
    string session_id = 2;
    string access_token = 3;
    string refresh_token = 4;
    google.protobuf.Timestamp access_token_expires_at = 5;
    google.protobuf.Timestamp refresh_token_expires_at = 6;
}

message UpdateUserRequest {
    string username = 1;
    optional string email = 2;
    optional string password = 3;
}

message UpdateUserResponse {
    User user = 1;
}